welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: type mismatch;
 found   : Int(110)
 required: Boolean
	if ( (90<n<110) || ( 190<n<210)) {true}
                   ^nearHundred:2: error: type mismatch;
 found   : Unit
 required: Boolean
	if ( (90<n<110) || ( 190<n<210)) {true}
        ^